--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
